# docs/swagger.json
@@ -19,8 +19,12 @@
                         "ApiKeyAuth": []
                     }
                 ],
+                "description": "Gets a user from the cache if there is a hit. This is the default endpoint.",
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "user"
                 ],
                 "summary": "Get a User by id from cache",
                 "parameters": [
@@ -61,6 +65,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "authentication"
+                ],
                 "summary": "User log in",
                 "parameters": [
                     {
@@ -95,6 +102,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "authentication"
+                ],
                 "summary": "User sign up",
                 "parameters": [
                     {
@@ -116,6 +126,53 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.errorResult"
+                        }
+                    }
+                }
+            }
+        },
+        "/users/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Gets a user from database. Use this to check if the cache is updated compared to the database.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Get a User by id from database",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "userId",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Authorization token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.userType"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/controllers.errorResult"
                         }
